Fix layout bugs (and improvements, fix the cut tooltips

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -21,30 +21,29 @@ html, body {
   height: 100%;
 }
 
+@footer-height: 50px;
+
 #wrap {
   min-height: 100%;
 }
 
 #main {
-  overflow:auto;
-  padding-bottom:150px; /* this needs to be bigger than footer height*/
+  // overflow:auto;
+  padding-bottom:@footer-height; /* this needs to be bigger than footer height*/
 }
 
 .footer {
   position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
+  margin-top: -@footer-height; /* negative value of footer height */
+  height: @footer-height;
   clear:both;
   padding-top:20px;
 }
 
-
-
 @bg-border-radius: 10px;
 .bg {
-  background: rgba(554, 255, 255, .6);
-  margin-top: 20px;
-  margin-bottom: 10px;
+  background: rgba(255, 255, 255, .8);
+  border: 1px solid #fff;
   -webkit-border-radius: @bg-border-radius;
   -moz-border-radius: @bg-border-radius;
   border-radius: @bg-border-radius;
